--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,13 +7,11 @@
             <div class="view overlay">
               <img class="card-img-top" src="../public/images/History.jpeg"
                 alt="History">
-              <a href="#!">
-                <div class="mask rgba-white-slight"></div>
-              </a>
             </div>
             <div class="card-body">
               <h4 class="card-title">History Quiz</h4>
               <p class="card-text">Think you know a thing or two about the past? Put your smarts to the test with these history trivia questions.</p>
+              <a href="/history" class="stretched-link"></a>
             </div>
           </div>
         </div>
@@ -22,13 +20,11 @@
             <div class="view overlay">
               <img class="card-img-top" src="../public/images/Science.png"
                 alt="Science">
-              <a href="#!">
-                <div class="mask rgba-white-slight"></div>
-              </a>
             </div>
             <div class="card-body">
               <h4 class="card-title">Science Quiz</h4>
               <p class="card-text">You Live, Breathe, And Eat It On The Daily, But How Much Do You Really Know About Science?</p>
+              <a href="/science" class="stretched-link"></a>
             </div>
           </div>
         </div>
@@ -37,13 +33,11 @@
             <div class="view overlay">
               <img class="card-img-top" src="../public/images/Sports.jpeg"
                 alt="Sports">
-              <a href="#!">
-                <div class="mask rgba-white-slight"></div>
-              </a>
             </div>
             <div class="card-body">
               <h4 class="card-title">Sports Quiz</h4>
               <p class="card-text">Are you a true sports expert? Click now to test your knowledge</p>
+              <a href="/sports" class="stretched-link"></a>
             </div>
           </div>
         </div>
@@ -52,13 +46,11 @@
             <div class="view overlay">
               <img class="card-img-top" src="../public/images/Television.png"
                 alt="Television">
-              <a href="#!">
-                <div class="mask rgba-white-slight"></div>
-              </a>
             </div>
             <div class="card-body">
               <h4 class="card-title">Television Quiz</h4>
               <p class="card-text">Be honest, how much TV do you watch?</p>
+              <a href="/television" class="stretched-link"></a>
             </div>
           </div>
         </div>
