--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -33,7 +33,7 @@
         </div>
         <div>
             <label><b>Correct Answer: </b></label>
-            <%= quiz.answerD %>
+            <%= quiz.correctAnswer %>
         </div> 
     </div>
     <br>
