--- a/views/history/question5.ejs
+++ b/views/history/question5.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 
 <% quizzes.forEach(function(q) { %>
-<% if (q.category === "History" && q.questionNo == 1) { %>
+<% if (q.category === "History" && q.questionNo == 5) { %>
 <div class="container mt-5">
     <div class="d-flex justify-content-center row">
         <div class="col-md-10 col-lg-7">
@@ -15,19 +15,20 @@
                         <h3 class="text-danger">Q.</h3>
                         <h5 class="mt-1 ml-2"><%= q.question %></h5>
                     </div><div class="ans ml-2">
-<label class="radio"> <input type="radio" name="brazil" value="brazil">A. &nbsp;<span><%= q.answerA %></span>
-</label>    
+<button type="button" id="wrongAns" class="btn btn-outline-primary">A. <%= q.answerA %></button>
 </div><div class="ans ml-2">
-<label class="radio"> <input type="radio" name="Germany" value="Germany">B. &nbsp;<span><%= q.answerB %></span>
-</label>    
+    <br>
+<button type="button" id="wrongAns" class="btn btn-outline-primary">B. <%= q.answerB %></button>
 </div><div class="ans ml-2">
-<label class="radio"> <input type="radio" name="Indonesia" value="Indonesia">C. &nbsp; <span><%= q.answerC %></span>
-</label>    
+    <br>
+<button type="button" id="wrongAns" class="btn btn-outline-primary">C. <%= q.answerC %></button>
 </div><div class="ans ml-2">
-<label class="radio"> <input type="radio" name="Russia" value="Russia">D. &nbsp;<span><%= q.answerD %></span>
-</label>    
+    <br>
+<button type="button" id="correctAns" class="btn btn-outline-primary">D. <%= q.answerD %></button>
 </div></div>
-                <div class="d-flex flex-row justify-content-between align-items-center p-3 bg-white"><button class="btn btn-primary d-flex align-items-center btn-danger" type="button"><i class="fa fa-angle-left mt-1 mr-1"></i>&nbsp;Previous</button><button class="btn btn-primary border-success align-items-center btn-success" type="button">Next<i class="fa fa-angle-right ml-2"></i></button></div>
+                <div class="d-flex flex-row justify-content-between align-items-center p-3 bg-white">
+                    <a href="/history/question4" class="btn btn-primary d-flex align-items-center btn-danger" type="button"><i class="fa fa-angle-left mt-1 mr-1"></i>&nbsp;Previous</a>
+                    <a href="history/results" class="btn btn-primary border-success align-items-center btn-success" type="button">See Results<i class="fa fa-angle-right ml-2"></i></a></div>
             </div>
         </div>
     </div>
