--- a/views/history/question2.ejs
+++ b/views/history/question2.ejs
@@ -27,7 +27,7 @@
 <button type="button" id="correctAns" class="btn btn-outline-primary">D. <%= q.answerD %></button>
 </div></div>
                 <div class="d-flex flex-row justify-content-between align-items-center p-3 bg-white">
-                    <a href="/history" class="btn btn-primary d-flex align-items-center btn-danger" type="button"><i class="fa fa-angle-left mt-1 mr-1"></i>&nbsp;Previous</a>
+                    <a href="/history" id="prevBtn" class="btn btn-primary d-flex align-items-center btn-danger" type="button"><i class="fa fa-angle-left mt-1 mr-1"></i>&nbsp;Previous</a>
                     <a href="question3" class="btn btn-primary border-success align-items-center btn-success" type="button">Next<i class="fa fa-angle-right ml-2"></i></a></div>
             </div>
         </div>
