--- a/views/history/question1.ejs
+++ b/views/history/question1.ejs
@@ -27,13 +27,12 @@
 <button type="button" id="wrongAns" class="btn btn-outline-primary">D. <%= q.answerD %></button>
 </div></div>
                 <div class="d-flex flex-row justify-content-between align-items-center p-3 bg-white">
-                    <a href="history/question2" class="btn btn-primary border-success align-items-center btn-success" type="button">Next<i class="fa fa-angle-right ml-2"></i></a></div>
+                    <a href="history/question2" id="nextBtn" class="btn btn-primary border-success align-items-center btn-success" type="button">Next<i class="fa fa-angle-right ml-2"></i></a></div>
             </div>
         </div>
     </div>
 </div>
 <% } %>
 <% }) %>
-
 
 <%- include('../partials/footer') %>
