--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,7 @@
   <title>QuizMaster</title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <script defer src="../../public/javascripts/quiz.js"></script>
 </head>
 <body>
     <nav class="navbar bg-dark navbar-inverse">
