--- a/views/sports/question5.ejs
+++ b/views/sports/question5.ejs
@@ -28,7 +28,7 @@
 </div></div>
                 <div class="d-flex flex-row justify-content-between align-items-center p-3 bg-white">
                     <a href="/sports/question4" class="btn btn-primary d-flex align-items-center btn-danger" type="button"><i class="fa fa-angle-left mt-1 mr-1"></i>&nbsp;Previous</a>
-                    <a href="sports/results" class="btn btn-primary border-success align-items-center btn-success" type="button">See Results<i class="fa fa-angle-right ml-2"></i></a></div>
+                    <a href="/sports" class="btn btn-primary border-success align-items-center btn-success" type="button">Reset Game<i class="fa fa-angle-right ml-2"></i></a></div>
             </div>
         </div>
     </div>
