--- a/views/quizzes/new.hbs
+++ b/views/quizzes/new.hbs
@@ -1,5 +1,3 @@
-<%- include('../partials/header') %>
-
 <div class="container">
     <h2 style="text-decoration: underline;">Create Question</h2>
     <br>
@@ -52,6 +50,4 @@
     </form>
 </div>
 
-<p><%= errorMsg %></p>
-
-<%- include('../partials/footer') %>
+<p>{{errorMsg}}</p>
