--- a/views/quizzes/show.hbs
+++ b/views/quizzes/show.hbs
@@ -1,39 +1,37 @@
-<%- include('../partials/header') %>
-
 <div class="container">
     <h2 style="text-decoration: underline;">Question Details</h2>
     <div>
         <div>
             <label><b>Category: </b></label>
-            <%= quiz.category %>
+            {{ quiz.category }}
         </div>
         <div>
             <label><b>Question: </b></label>
-            <%= quiz.question %>
+            {{ quiz.question }}
         </div>
         <div>
             <label><b>Question #: </b></label>
-            <%= quiz.questionNo %>
+            {{ quiz.questionNo }}
         </div>
         <div>
             <label><b>Answer A: </b></label>
-            <%= quiz.answerA %>
+            {{ quiz.answerA }}
         </div>
         <div>
             <label><b>Answer B: </b></label>
-            <%= quiz.answerB %>
+            {{ quiz.answerB }}
         </div>
         <div>
             <label><b>Answer C: </b></label>
-            <%= quiz.answerC %>
+            {{ quiz.answerC }}
         </div>
         <div>
             <label><b>Answer D: </b></label>
-            <%= quiz.answerD %>
+            {{ quiz.answerD }}
         </div>
         <div>
             <label><b>Correct Answer: </b></label>
-            <%= quiz.correctAnswer %>
+            {{ quiz.correctAnswer }}
         </div> 
     </div>
     <br>
@@ -41,7 +39,6 @@
     <a type="button" href="/quizzes" class="btn btn-primary">Return</a>
 </div>
 
-<%- include('../partials/footer') %>
 
 
 
